# bathos

./: .bth.toml  .coverage  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  inventory.txt  main.py  praxia.toml  pyproject.toml  report.html
.agent/: workspace.id
.github/: SECRETS.md
.github/workflows/: publish.yml  test.yml
.praxia/: audits.jsonl  identity.json  manifest.toml  mission.md  plans.jsonl  praxia.just  recon.jsonl  vsm_state.json
.praxia/cache/: analyzer.db
.praxia/docs/: INDEX.md
.praxia/docs/decisions/: 260721_bp2-bp3-claim-tier-gate-ports.md
.praxia/docs/plans/: 260611_worktree-workspace-resolution-dag.md  260710_asr-rigor-ports-sprint-composition.md
.praxia/docs/specs/: 260602_item-136-bth-migrate-workflow.md  260602_item-137-global-instruction-portability.md  260602_item-791-results-management.md  260602_item-792-popper-evalue.md  260611_worktree-workspace-resolution.md  260616_bathos-claim-tier-rigor-open-design-call.md  260707_scientific-validity-gates.md
.praxia/research/: synthesis.jsonl
.praxia/specs/: bathos-design.md  bathos-v01-plan.md
.praxia/sprints/: 2026-05-15-v01-pypi-rtd-plan.md  2026-05-15-v02-sprint-plan.md
agent_assets/agents/: experiment-runner.md
agent_assets/docs/: claude-code-integration.md  gemini-cli-integration.md
agent_assets/skills/using-bathos/: SKILL.md
agent_assets/skills/using-bathos/literature-parity/: 01_reconstruct.md  02_reconcile.md  03_refute.md  04_adjudicate.md  05_verdict.md  example_parity_validate.py  parity.bth.toml.template
agent_assets/snippets/: rules.md
agent_assets/using_bathos/: SKILL.md
docs/: Makefile  telemetry-schema.md
docs/source/: api.rst  architecture.rst  conf.py  contributing.rst  index.rst  slurm-integration.rst  user-guide.rst
docs/superpowers/plans/: 2026-05-19-agent-onboarding-export.md  2026-05-19-decorator.md  2026-05-19-historical-migration.md  2026-05-19-linter.md  2026-05-19-remote-management.md  2026-05-19-schema-versioning.md  2026-05-19-skill-and-export-mcp.md  2026-05-19-v02-feature-wiring.md  2026-05-20-agentic-integrity-design.md  2026-05-20-agentic-integrity-impl-plan.md  2026-05-21-viz-suite-plan.md
docs/superpowers/specs/: 2026-05-21-viz-suite-design.md
scripts/analysis/: backfill_nlm_log.py
scripts/benchmarks/: .bth.toml
scripts/experiments/: .bth.toml
scripts/slurm/: _bth_env.sh
scripts/validation/: parity_validate.bth.toml  parity_validate.py
src/bathos/: __init__.py  anchor.py  archive.py  attestation.py  campaign_edges.py  campaign_report.py  campaigns.py  capability.py  catalog.py  checker.py  cite.py  claim.py  classifier.py  cli.py  cluster.py  compact.py  config.py  decorators.py  errors.py  export.py  figure_manifest.py  figure_registry.py  gate.py  git.py  harness_run.py  init.py  linter.py  mcp.py  mcp_auth.py  migrate.py  new_experiment.py  parity.py  plugin_export.py  postmortem.py  prereg.py  provenance.py  query.py  readback.py  remote.py  repair.py  (+13 more)
src/bathos/harness_adapters/: __init__.py  port_parity_adapter.py
src/bathos/templates/: _bth_env.sh
src/bathos/viz/: __init__.py  data.py  html.py  server.py
src/bathos/viz/static/: VERSIONS.md
src/bathos/viz/templates/: _campaign.html  _run_detail.html  _runs.html  index.html
tests/: conftest.py  test_anchor.py  test_anchor_cli.py  test_anchor_durability.py  test_anchor_mcp.py  test_archive.py  test_attestation.py  test_attestation_cli.py  test_attestation_durability.py  test_attestation_mcp.py  test_attestation_registration_gate.py  test_bp2_bp3_claim_gates.py  test_bth_submit.py  test_campaign_edges.py  test_campaign_report.py  test_campaign_report_integration.py  test_campaigns.py  test_campaigns_popper.py  test_capability.py  test_catalog.py  test_checker.py  test_cite.py  test_claim.py  test_claim_attest_parity.py  test_claim_cli.py  test_classifier.py  test_cli.py  test_cluster_workflow.py  test_compact.py  test_config.py  test_decorators.py  test_discriminability_ingest.py  test_errors.py  test_export.py  test_figure_manifest.py  test_figure_manifest_populate.py  test_figure_registry.py  test_figure_registry_cli.py  test_figure_registry_mcp.py  test_gate.py  (+54 more)
