[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bathos"
version = "0.1.0"
description = "Local-first, zero-server experiment tracking for researchers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Marielle Russo", email = "mariellexr@gmail.com" },
]
license = { text = "Apache 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "duckdb>=1.0",
    "pyarrow>=16",
    "pytz>=2026.2",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0,<3.0"]
dev = [
    "pytest>=8",
    "pytest-tmp-files>=0.0.2",
    "pytest-json-report>=1.5",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/mariellerossi/bathos"
Documentation = "https://bathos.readthedocs.io"
Repository = "https://github.com/mariellerossi/bathos.git"
"Bug Tracker" = "https://github.com/mariellerossi/bathos/issues"

[project.scripts]
bth = "bathos.cli:app"
bth-mcp = "bathos.mcp:mcp_server"

[tool.hatch.build.targets.wheel]
packages = ["src/bathos"]
artifacts = ["agent_assets/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--json-report --json-report-file=tmp/pytest.json -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-tmp-files>=0.0.2",
    "pytest-json-report>=1.5",
    "ruff>=0.6",
    "pyright>=1.1",
]
