[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bathos"
version = "0.13.0a1"
description = "Local-first, zero-server experiment tracking for researchers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Marielle Russo", email = "mariellexr@gmail.com" },
]
license = { text = "Apache 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "duckdb>=1.0",
    "pyarrow>=16",
    "pytz>=2026.2",
    "tomlkit>=0.12",
    "toml>=0.10",
    "rich>=13",
    "fastmcp>=3.3.1",
    "cisternal>=0.1.0a1",
]

[project.optional-dependencies]
viz = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "httpx>=0.28.1",
]
stats = [
    "scipy>=1.11",
]
docs = [
    "sphinx>=7",
]
dev = [
    "pytest>=8",
    "pytest-tmp-files>=0.0.2",
    "pytest-json-report>=1.5",
    "ruff>=0.6",
    "pyright>=1.1",
]
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-tmp-files>=0.0.2",
    "pytest-json-report>=1.5",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/mariellerossi/bathos"
Documentation = "https://bathos.readthedocs.io"
Repository = "https://github.com/mariellerossi/bathos.git"
"Bug Tracker" = "https://github.com/mariellerossi/bathos/issues"

[project.scripts]
bth = "bathos.cli:app"
bth-mcp = "bathos.mcp:mcp_server"

[tool.hatch.build.targets.wheel]
packages = ["src/bathos"]
include = [
  "src/bathos/viz/templates/index.html",
  "src/bathos/viz/templates/_runs.html",
  "src/bathos/viz/templates/_run_detail.html",
  "src/bathos/viz/templates/_campaign.html",
  "src/bathos/viz/static/alpine.min.js",
  "src/bathos/viz/static/pico.min.css",
  "src/bathos/viz/static/VERSIONS.md",
]

[tool.hatch.build.targets.wheel.force-include]
"agent_assets" = "bathos/agent_assets"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--json-report --json-report-file=tmp/pytest.json -q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["tests"]
